Chore: Fixed Alignment on menu section for all screen sizes.

--- a/styles.css
+++ b/styles.css
@@ -164,10 +164,11 @@ nav a:hover {
 }
 
 #Menu .menu-tile > p {
-    font-size: 16px;
+    font-size: 14px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
     margin: 0px;
+    padding: 10px 3px;
 }
 
 #Menu .menu-tile > button {
@@ -301,7 +302,7 @@ nav a:hover {
 
     .menu-img {
         width: 95%;
-        height: 250px;
+        height: 230px;
         margin: 10px 5px;
         margin-bottom: 0px;
     }
@@ -309,14 +310,14 @@ nav a:hover {
     #Menu > div {
         background-color: white;
         margin-top: 20px auto;
-        width: 35%;
+        width: 40%;
         height: 340px;
         display: inline-block;
         text-align: center;
         border-radius: 10px;
         box-shadow: 5px 5px black;
         align-items: center;
-        margin-left: 55px;
+        margin-left: 35px;
         margin-bottom: 50px;
     }
 
@@ -450,13 +451,13 @@ nav a:hover {
         background-color: white;
         margin-top: 20px auto;
         width: 35%;
-        height: 340px;
+        height: 360px;
         display: inline-block;
         text-align: center;
         border-radius: 10px;
         box-shadow: 5px 5px black;
         align-items: center;
-        margin-left: 80px;
+        margin-left: 70px;
         margin-bottom: 70px;
     }
 
@@ -562,14 +563,14 @@ nav a:hover {
     #Menu > div {
         background-color: white;
         margin-top: 20px auto;
-        width: 25%;
+        width: 30%;
         height: 430px;
         display: inline-block;
         text-align: center;
         border-radius: 10px;
         box-shadow: 5px 5px black;
         align-items: center;
-        margin-left: 300px;
+        margin-left: 130px;
         margin-bottom: 50px;
     }
 
@@ -580,9 +581,17 @@ nav a:hover {
         margin-bottom: 0px;
     }
 
+    #Menu .menu-tile > p {
+        font-size: 14px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 700;
+        margin: 0px;
+        padding: 5px 3px;
+    }
+
     #Menu .cta-text {
         font-size: 2rem;
-        margin: 0px 500px;
+        margin: 0px 350px;
         padding-bottom: 30px;
     }
 
@@ -641,13 +650,13 @@ nav a:hover {
         background-color: white;
         margin-top: 20px auto;
         width: 29%;
-        height: 380px;
+        height: 390px;
         display: inline-block;
         text-align: center;
         border-radius: 10px;
         box-shadow: 5px 5px black;
         align-items: center;
-        margin-left: 185px;
+        margin-left: 140px;
         margin-bottom: 50px;
     }
 
@@ -694,13 +703,13 @@ nav a:hover {
         background-color: white;
         margin-top: 20px auto;
         width: 25%;
-        height: 400px;
+        height: 410px;
         display: inline-block;
         text-align: center;
         border-radius: 10px;
         box-shadow: 5px 5px black;
         align-items: center;
-        margin-left: 270px;
+        margin-left: 70px;
         margin-bottom: 50px;
     }
 
@@ -746,21 +755,21 @@ nav a:hover {
 
     #Menu > div {
         background-color: white;
-        margin-top: 20px auto;
+        margin-top: 20px;
         width: 25%;
-        height: 400px;
+        height: 410px;
         display: inline-block;
         text-align: center;
         border-radius: 10px;
         box-shadow: 5px 5px black;
         align-items: center;
-        margin-left: 300px;
+        margin-left: 80px;
         margin-bottom: 50px;
     }
 
     #Menu .cta-text {
         font-size: 2.5rem;
-        margin: 0px 350px;
+        margin: 0px 370px;
         padding-bottom: 30px;
     }
 
@@ -770,4 +779,5 @@ nav a:hover {
         margin: 20px 70px;
         padding-bottom: 30px;
     }
+    
 }
